--- a/Examenes.html
+++ b/Examenes.html
@@ -90,7 +90,7 @@
 
 <div class="jumbotron jumbotron-fluid" style="padding-bottom: 35%; margin-bottom: 2px; background-image: url(https://images.wallpaperscraft.com/image/battlefield_soldier_equipment_smoke_city_15731_1680x1050.jpg); background-size: cover;">
   <div class="container">
-    <h1 class="display-4" style="color: #ffffff;">Asvsb Hack</h1>
+    <h1 class="display-4" style="color: #ffffff;">Asvab Hack</h1>
     <p class="lead"  style="color: #ffffff;">Todo lo que necesitas para dominar el Asvab.</p>
   </div>
 </div>
