--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <!-- end of navbar -->
 
-<div class="jumbotron jumbotron-fluid" style="padding-bottom: 35%; margin-bottom: 2px; background-image: url(https://c.wallhere.com/photos/fd/07/battlefield_soldiers_gun_equipment_military_equipment-740513.jpg); background-size: cover;">
+<div class="jumbotron jumbotron-fluid" style="padding-bottom: 35%; margin-bottom: 2px; background-image: url(https://c.wallhere.com/photos/fd/07/battlefield_soldiers_gun_equipment_military_equipment-740513.jpg!d); background-size: cover;">
   <div class="container">
     <h1 class="display-4" style="color: #ffffff;">Asvab Hack</h1>
     <p class="lead"  style="color: #ffffff;">Todo lo que necesitas para dominar el Asvab.</p>
