--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           Contacto
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href=https://www.facebook.com/hf.webdevelopment.3>Facebook</a>
-          <a class="dropdown-item" href="https://twitter.com/hf_web">Twiter</a>
+          <a class="dropdown-item" href="https://www.facebook.com/hector.fontanez.1029">Facebook</a>
+          <a class="dropdown-item" href="https://twitter.com/hfontanez83">Twiter</a>
           <a class="dropdown-item" href="mailto:hfwebdevelopment@gmail.com?Subject=Hello%20hfwebdevelopment">Email</a>
         </div>
       </li>
