--- a/videos.html
+++ b/videos.html
@@ -89,9 +89,9 @@
           Contacto
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href=https://www.facebook.com/hf.webdevelopment.3>Facebook</a>
-          <a class="dropdown-item" href="https://twitter.com/hf_web">Twiter</a>
-          <a class="dropdown-item" href="mailto:hfwebdevelopment@gmail.com?Subject=Hello%20hfwebdevelopment">Email</a>
+          <a class="dropdown-item" href="https://www.facebook.com/hector.fontanez.1029">Facebook</a>
+          <a class="dropdown-item" href="https://twitter.com/hfontanez83">Twiter</a>
+          <a class="dropdown-item" href="mailto:hfwebdevelopment@gmail.com?Subject=Hello%20and%20welcome!">Email</a>
         </div>
       </li>
     </ul>
