--- a/Examenes.html
+++ b/Examenes.html
@@ -41,7 +41,15 @@
 			padding: 5px; 
 		}
 
-
+		@media(max-width: 1234px){
+			#main-container .content {
+			float: none;
+			width: 100%;
+			text-align: center;
+			display: inline-block;
+			padding: 0;
+			margin: 0;
+		}
 	}
 	</style>
 	
@@ -110,6 +118,7 @@
 				<p>Pulsa la Imagen para descargar Examen de Simulacion 3.</p>
 				<a href="./AsvabDocuments/Simulation_3.docx" download> <img src="./SavedPictures/exam.jpg"></a>
 			</div>
+			
 		</div>
 		<a href="index.html" <i class="fas fa-home" style="text-decoration: none; color: #ffffff; float: right; padding-right: 5px;"></i>Home</a>
 	</section>
