--- a/Examenes.html
+++ b/Examenes.html
@@ -13,44 +13,24 @@
 		text-align: center;
 		color: #ffffff;
 	}
-		#main-container .main-content {
-			float: left;
-			background-color: black;
-			
-			padding-left: 5px;
-		}
-
-		#main-container .content{
-			float: left;
-			width: 25%;
-			padding: 40px 32px;
-			margin-top: 10px; 
-			text-align: center;
-			color: #ffffff;
-			text-decoration: none;
-		}
-
-		#main-container .content img {
-			width: 100%;
-			height: 230px;
-		}
-
-		.footer{
-			background-color:#1f2e2e;
-			color: #ffffff;
-			padding: 5px; 
-		}
-
-		@media(max-width: 1234px){
-			#main-container .content {
-			float: none;
-			width: 100%;
-			text-align: center;
-			display: inline-block;
-			padding: 0;
-			margin: 0;
-		}
+	#main-container{
+		background-color: black;
 	}
+
+	.main-content{
+		text-align: center;
+		padding: 10px;
+		color: #ffffff;
+	}
+
+
+
+	footer {
+		background-color:#1f2e2e;
+		color: #ffffff;
+		padding: 5px; 
+	}
+
 	</style>
 	
 	<title>Asvab Hack</title>
