--- a/Examenes.html
+++ b/Examenes.html
@@ -83,7 +83,7 @@
 	<section id="main-container">
 		<div class="main-content">
 			<div class="content">
-				<p>Pulsa la Imagen para descargar Examen de Simulacion.</p>
+				<p>Pulsa las Imagenes para descargar los examenes de Simulacion.</p>
 				<p>Simulacion .1</p>
 				<a href="./AsvabDocuments/examenes_sin_contestar.doc" download> <img src="./SavedPictures/exam.jpg"></a>
 			</div>
