--- a/videos.html
+++ b/videos.html
@@ -36,7 +36,7 @@
 			width: 100%;
 			height: 230px;
 		}
-		iframe {
+		<!--iframe {
 			padding: 5px 2px;
 			
 			
@@ -44,7 +44,7 @@
 			
 			
 
-		}
+		}-->
 
 		.footer{
 			background-color:#1f2e2e;
