--- a/videos.html
+++ b/videos.html
@@ -36,15 +36,11 @@
 			width: 100%;
 			height: 230px;
 		}
-		<!--iframe {
+		iframe {
 			padding: 5px 2px;
-			
-			
-			
-			
-			
-
-		}-->
+			margin-left: 50px;
+			margin-right: 50px;
+		}
 
 		.footer{
 			background-color:#1f2e2e;
