--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 		}
 	</style>
 	
-	<title>Asvab Hack</title>
+	<title>Hector Fontanez Networking Hub</title>
 </head>
 	
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Asvab Hack</a>
+  <a class="navbar-brand" href="#">Hector Fontanez Networking Hub</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -75,10 +75,10 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#boxes">Materiales</a>
+        <a class="nav-link" href="#boxes">Materials</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://paypal.me/hfontanez">Donacion</a>
+        <a class="nav-link" href="https://paypal.me/hfontanez">Donate</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -96,24 +96,24 @@
 
 <!-- end of navbar -->
 
-<div class="jumbotron jumbotron-fluid" style="padding-bottom: 35%; margin-bottom: 2px; background-image: url(https://c.wallhere.com/photos/6b/a4/battlefield_soldier_equipment_smoke_city-740550.jpg!d); background-size: cover;">
+<div class="jumbotron jumbotron-fluid" style="padding-bottom: 35%; margin-bottom: 2px; background-image: url(https://drive.google.com/file/d/1i__h1YYDwWJCS8sApoKd3y-C4neSNZ34/view?usp=drivesdk); background-size: cover;">
   <div class="container">
-    <h1 class="display-4" style="color: #ffffff;">Asvab Hack</h1>
-    <p class="lead"  style="color: #ffffff;">Todo lo que necesitas para dominar el Asvab.</p>
+    <h1 class="display-4" style="color: #ffffff;">Hector Fontanez</h1>
+    <p class="lead"  style="color: #ffffff;">Networking Learning Hub.</p>
   </div>
 </div>
 
 
 	<header>
-		<h2>Materiales</h2>
+		<h2>Materials</h2>
 	</header>
 	<section id="boxes">
 		<div class="boxcontainer">
 			<div class="box">
 				<img src="./SavedPictures/exam.jpg">
-				<h4>Examenes de Practica</h4>
-				<p>Mide tu progreso.</p>
-				<a href="Examenes.html">Examenes</a>
+				<h4>Books</h4>
+				<p>Networking Books.</p>
+				<a href="Examenes.html">Networking Books</a>
 			</div>
 		<div class="box">
 			<img src="./SavedPictures/wordlist.jpg">
