--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Contacto
+          Contact
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="https://www.facebook.com/hector.fontanez.1029">Facebook</a>
@@ -96,7 +96,7 @@
 
 <!-- end of navbar -->
 
-<div class="jumbotron jumbotron-fluid" style="padding-bottom: 35%; margin-bottom: 2px; background-image: url(https://drive.google.com/file/d/1G9z95G6hAI1N7vII9EsmMBq4ffh5owlS/view?usp=drivesdk); background-size: cover;">
+<div class="jumbotron jumbotron-fluid" style="padding-bottom: 35%; margin-bottom: 2px; background-image: url(https://drive.google.com/file/d/1GDIDZg5ML4szQU7ElCm2wJGONjOIHv-S/view?usp=drivesdk); background-size: cover;">
   <div class="container">
     <h1 class="display-4" style="color: #ffffff;">Hector Fontanez</h1>
     <p class="lead"  style="color: #ffffff;">Networking Learning Hub.</p>
