--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <!-- end of navbar -->
 
-<div class="jumbotron jumbotron-fluid" style="padding-bottom: 35%; margin-bottom: 2px; background-image:./SavedPictures/JackConnector.jpg"> ; background-size: cover;">
+<div class="jumbotron jumbotron-fluid" style="padding-bottom: 35%; margin-bottom: 2px; background-image:./SavedPictures/JackConnector.jpg; background-size: cover;">
   <div class="container">
     <h1 class="display-4" style="color: #ffffff;">Hector Fontanez</h1>
     <p class="lead"  style="color: #ffffff;">Networking Learning Hub.</p>
